--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ sanic = ">=19.3.1"
 werkzeug = ">=0.15.4"
 tortoise-orm = ">=0.11.11"
 click = ">=7.0"
+Pillow= ">=6.0.0"
 
 [requires]
 python_version = "3.7"
