--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ werkzeug = ">=0.15.4"
 tortoise-orm = ">=0.11.11"
 click = ">=7.0"
 Pillow= ">=6.0.0"
+cos-python-sdk-v5 = ">=1.6.9"
 
 [requires]
 python_version = "3.7"
