--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ tortoise-orm = ">=0.11.11"
 click = ">=7.0"
 Pillow= ">=6.0.0"
 cos-python-sdk-v5 = ">=1.6.9"
+sentry-sdk = "==0.9.0"
 
 [requires]
-python_version = "3.7"
+python_version = "3.6"
