--- a/Pipfile
+++ b/Pipfile
@@ -8,12 +8,12 @@ verify_ssl = true
 [packages]
 sanic = ">=19.3.1"
 werkzeug = ">=0.15.4"
-tortoise-orm = ">=0.11.11"
 click = ">=7.0"
 Pillow= ">=6.0.0"
 cos-python-sdk-v5 = ">=1.6.9"
 sentry-sdk = "==0.9.0"
 aiomysql = ">=0.0.20"
+tortoise = {ref = "dev",git = "https://github.com/dongweiming/tortoise-orm.git",editable = true}
 
 [requires]
 python_version = "3.6"
