--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ Pillow= ">=6.0.0"
 cos-python-sdk-v5 = ">=1.6.9"
 sentry-sdk = "==0.9.0"
 aiomysql = ">=0.0.20"
-tortoise = {ref = "dev",git = "https://github.com/dongweiming/tortoise-orm.git",editable = true}
+tortoise-orm = ">=0.13.0"
 
 [requires]
 python_version = "3.6"
