--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ cos-python-sdk-v5 = ">=1.6.9"
 sentry-sdk = "==0.9.0"
 aiomysql = ">=0.0.20"
 tortoise-orm = ">=0.13.0"
+gunicorn = "*"
 
 [requires]
 python_version = "3.6"
